deploy/gke/base/gateway/httproute-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  labels:
    app.kubernetes.io/part-of: streamhub
    app.kubernetes.io/name: web
spec:
  parentRefs:
    - name: streamhub
      sectionName: https-web
  hostnames:
    - web.streamhub.com
  rules:
    - backendRefs:
        - name: web
          port: 8080
